# bookmarks-chat

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: config.py  crawler.py  server.py
src/bookmark/: config.py  loader.py  models.py  utils.py
src/crawler/: __init__.py  crawler.py  enum.py  utils.py
src/vectordb/: config.py  index.py  session.py  utils.py
